--- a/main.ipynb
+++ b/main.ipynb
@@ -28,6 +28,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load preprocess.py\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "@author: ZiqiLiu\n",
+    "\n",
+    "\n",
+    "@file: preprocess.py\n",
+    "\n",
+    "@time: 2017/11/11 上午1:56\n",
+    "\n",
+    "@desc: combine all dialogs into one text file, retaining dialogs only\n",
+    "'''\n",
+    "from glob import glob\n",
+    "from tqdm import tqdm\n",
+    "import codecs\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from stop_words import get_stop_words\n",
+    "from flashtext import KeywordProcessor\n",
+    "import pickle\n",
+    "import re\n",
+    "import os\n",
+    "from multiprocessing import Pool\n",
+    "import functools\n",
+    "\n",
+    "files = glob('./dialogs/**/*.tsv')\n",
+    "\n",
+    "\n",
+    "# pattern1 = re.compile(r'[1-9\\\\.]+')\n",
+    "# pattern2 = re.compile(r'.+//.+')\n",
+    "# pattern3 = re.compile(r'\\w+')\n",
+    "#\n",
+    "#\n",
+    "# def filter1(s):\n",
+    "#     return pattern1.match(s) and pattern2.match(s) and pattern3.match(s)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def processing(i, file_list):\n",
+    "    tk = RegexpTokenizer(r'\\w\\S+\\w')\n",
+    "\n",
+    "    # create English stop words list\n",
+    "    en_stop = get_stop_words('en')\n",
+    "\n",
+    "    stopword_processor = KeywordProcessor()\n",
+    "    for w in en_stop:\n",
+    "        stopword_processor.add_keyword(w, ' ')\n",
+    "\n",
+    "    with open('stopword_processor.pkl', 'wb') as f:\n",
+    "        pickle.dump(stopword_processor, f)\n",
+    "\n",
+    "    p_stemmer = PorterStemmer()\n",
+    "\n",
+    "    with codecs.open('whole_dialogs_stem_%d' % i, 'w', 'utf-8') as out:\n",
+    "        for fi in tqdm(file_list):\n",
+    "            with codecs.open(fi, 'r', 'utf-8') as f:\n",
+    "                sentences = [stopword_processor.replace_keywords(\n",
+    "                    line.strip().split('\\t')[-1].lower()) for\n",
+    "                    line in f]\n",
+    "                words = functools.reduce(lambda x, y: x + y,\n",
+    "                                         map(tk.tokenize, sentences))\n",
+    "                words = map(p_stemmer.stem, words)\n",
+    "                out.write(' '.join(words) + '\\n')\n",
+    "\n",
+    "\n",
+    "def div_list(l, n):\n",
+    "    length = len(l)\n",
+    "    t = length // n\n",
+    "    quaters = [t * i for i in range(0, n)]\n",
+    "    ran = range(0, n - 1)\n",
+    "    result = [l[quaters[i]:quaters[i + 1]] for i in ran]\n",
+    "    result.append(l[quaters[n - 1]:len(l)])\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    process_num = 8\n",
+    "    p = Pool()\n",
+    "    div_files = div_list(files, process_num)\n",
+    "    for i in range(process_num):\n",
+    "        p.apply_async(processing, args=(\n",
+    "            i, div_files[i]))\n",
+    "    p.close()\n",
+    "    p.join()\n",
+    "\n",
+    "    output_list = glob('./whole_dialogs_stem_*')\n",
+    "    for output in output_list:\n",
+    "        os.system('cat %s >> whole_dialogs_stem' % output)\n",
+    "        os.system('rm %s' % output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load word_count.py\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "@author: ZiqiLiu\n",
+    "\n",
+    "\n",
+    "@file: word_count.py\n",
+    "\n",
+    "@time: 2017/11/11 上午2:58\n",
+    "\n",
+    "@desc:\n",
+    "'''\n",
+    "\n",
+    "import codecs\n",
+    "from collections import Counter\n",
+    "import pickle\n",
+    "from tqdm import tqdm\n",
+    "import re\n",
+    "from flashtext import KeywordProcessor\n",
+    "from my_prefix_tree import PrefixTree\n",
+    "\n",
+    "with open('stopword_for_wc', 'r') as f:\n",
+    "    stop_word_addon = [line.strip() for line in f]\n",
+    "\n",
+    "split_pattern = re.compile(r'\\s+')\n",
+    "\n",
+    "word_counter = Counter()\n",
+    "\n",
+    "with codecs.open('whole_dialogs', 'r', 'utf-8') as f:\n",
+    "    for line in tqdm(f):\n",
+    "        word_list = split_pattern.split(line)\n",
+    "        word_counter.update(word_list)\n",
+    "for stop_w in stop_word_addon:\n",
+    "    del word_counter[stop_w]\n",
+    "top_words = sorted(word_counter.items(), key=lambda a: a[1], reverse=True)[:5000]\n",
+    "\n",
+    "with codecs.open('wc', 'w', 'utf-8') as out:\n",
+    "    for key, value in top_words:\n",
+    "        out.write('%s\\t%d\\n' % (key, value))\n",
+    "\n",
+    "keyword_processer = PrefixTree()\n",
+    "for w in top_words:\n",
+    "    keyword_processer.update(w[0])\n",
+    "\n",
+    "with open('keyword_processor.pkl', 'wb') as f:\n",
+    "    pickle.dump(keyword_processer, f)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
